# od_backend

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  config.toml.example  docker-compose.yml  pyproject.toml
.github/workflows/: python-ci.yml
src/od_backend/: __init__.py  configure_openai.py  dissertation_downloads.py  main.py  session_data.py
tests/: test_dissertation_downloads.py  test_session_data.py
