[project]
name = "od-backend"
version = "0.1.0"
description = "Back-end source code for opendissertation.com"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mypy>=2.3.0",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "uvicorn>=0.51.0",
]
